Mon Dec 27 12:57:52 CET 1999  Sven Neumann <sven@gimp.org>

	* libgimp/gimp.h
	* libgimp/gimpdrawable.c
	* libgimp/gimpimage.c
	* libgimp/gimplayer.c: use enums instead of gint where appropriate

	* plug-ins/common/pnm.c: got rid of a few compiler warnings 

Sat Dec 25 23:15:46 PST 1999 Manish Singh <yosh@gimp.org>

	* Makefile.am: added spec file to EXTRA_DIST

	* docs/Makefile.am: added undo.txt to EXTRA_DIST

	* app/interface.c: removed the DODGY warning, doesn't look dodgy to me

	* libgimp/*.h: missed an s/Library/Lesser/

	* tools/pdbgen/*: lots of work on the libgimp portion

1999-12-26  Shirasaki Yasuhiro  <yasuhiro@gnome.gr.jp>

	* plug-ins/common/gbr.c
	* plug-ins/common/gee.c
	* plug-ins/common/gicon.c
	* plug-ins/common/glasstile.c
	* plug-ins/common/gpb.c
	* plug-ins/common/gqbist.c
	* plug-ins/common/gradmap.c
	* plug-ins/common/gtm.c
	* plug-ins/common/gz.c
	* plug-ins/common/hot.c
	* po-plug-ins/POTFILES.in: Added gettext support.

1999-12-25 Garry R. Osgood <gosgood@idt.net>
        Season's Greetings!
        * app/clone.c
        * app/paint_core.c
        * app/paint_core.h
        * MAINTAINERS

        MAINTAINERS: Updated my entry (it wasn't there ;)
        app/paint_core.[ch] supplied new PaintTool states to clone_paint_func() so that
        writes of temporary markings made directly to the window are not
        clobbered by buffered writes stemming from gdisplay_flush_xxx()
        routines. clone_tool_paint_func() has been modified to take advantage
        of these new states, retiring bug #2184 in a way that does not change 
        user interface semantics. There are small additions to the PaintCore 
        interface that do not affect clientele unaware of added semantics. 
        These changes are detailed at http://idt.net/~gosgood/gimp-patch/patch03.html.
	
Sat Dec 25 04:14:03 CET 1999  Marc Lehmann <pcg@goof.com>

        * gimp1_1_splash.ppm: Crappy it is, but at least temporary! Feel