@@ -44,23 +44,22 @@
 #define variation_same   (-2)
 
 /* Declare local functions. */
-static void query(void);
-static void run(char *name,
-		int nparams,
-		GParam * param,
-		int *nreturn_vals,
-		GParam ** return_vals);
-static gint dialog();
+static void query             (void);
+static void run               (char    *name,
+		               int      nparams,
+		               GParam  *param,
+		               int     *nreturn_vals,
+			       GParam **return_vals);
+static void doit              (GDrawable *drawable);
 
-static void doit(GDrawable * drawable);
-
-static void set_flame_preview();
-static void load_callback(GtkWidget * widget, gpointer data);
-static void store_callback(GtkWidget * widget, gpointer data);
-static void set_edit_preview();
-static void menu_cb(GtkWidget * widget, gpointer data);
-static void my_mw_update_cb(gpointer data);
-static void init_mutants();
+static gint dialog            (void);
+static void set_flame_preview (void);
+static void load_callback     (GtkWidget *widget, gpointer data);
+static void save_callback     (GtkWidget *widget, gpointer data);
+static void set_edit_preview  (void);
+static void menu_cb           (GtkWidget *widget, gpointer data);
+static void my_mw_update_cb   (gpointer data);
+static void init_mutants      (void);
 
 char buffer[10000];
 GtkWidget *cmap_preview;
@@ -68,7 +67,7 @@ GtkWidget *flame_preview;
 int preview_width, preview_height;
 GtkWidget *dlg;
 static GtkWidget *file_dlg = 0;
-static int load_store;
+static int load_save;
 
 GtkWidget *edit_dlg = 0;
 
@@ -111,7 +110,8 @@ frame_spec f = {0.0, &config.cp, 1, 0.0};
 MAIN()
 
 
-static void query()
+static void 
+query (void)
 {
   static GParamDef args[] =
   {
@@ -125,8 +125,8 @@ static void query()
 
   INIT_I18N();
   gimp_install_procedure("plug_in_flame",
-			 _("cosmic recursive fractal flames"),
-			 _("use Smooth Palette to make colormaps"),
+			 _("Creates cosmic recursive fractal flames"),
+			 _("Creates cosmic recursive fractal flames"),
 			 "Scott Draves",
 			 "Scott Draves",
 			 "1997",
@@ -137,7 +137,9 @@ static void query()
 			 args, return_vals);
 }
 
-static void maybe_init_cp() {
+static void 
+maybe_init_cp (void) 
+{
   if (0 == config.cp.spatial_oversample) {
     config.randomize = 0;
     config.variation = variation_same;
@@ -162,8 +164,12 @@ static void maybe_init_cp() {
   }
 }
 
-static void run(char *name, int n_params, GParam * param, int *nreturn_vals,
-		GParam ** return_vals)
+static void 
+run (char    *name, 
+     int      n_params, 
+     GParam  *param, 
+     int     *nreturn_vals,
+     GParam **return_vals)
 {
   static GParam values[1];
   GDrawable *drawable = NULL;
@@ -221,7 +227,8 @@ static void run(char *name, int n_params, GParam * param, int *nreturn_vals,
 }
 
 static void
-drawable_to_cmap(control_point *cp) {
+drawable_to_cmap (control_point *cp) 
+{
   int i, j;
   GPixelRgn pr;
   GDrawable *d;
@@ -258,7 +265,8 @@ drawable_to_cmap(control_point *cp) {
   }
 }
 
-static void doit(GDrawable * drawable)
+static void 
+doit (GDrawable * drawable)
 {
   gint width, height;
   guchar *tmp;
@@ -325,12 +333,16 @@ static void doit(GDrawable * drawable)
 }
 
 
-static void close_callback(GtkWidget * widget, gpointer data)
+static void 
+close_callback (GtkWidget *widget, 
+		gpointer   data)
 {
   gtk_main_quit();
 }
 
-static void ok_callback(GtkWidget * widget, gpointer data)
+static void 
+ok_callback (GtkWidget *widget, 
+	     gpointer   data)
 {
   run_flag = 1;
   gtk_widget_destroy(GTK_WIDGET(data));
@@ -338,12 +350,15 @@ static void ok_callback(GtkWidget * widget, gpointer data)
     gtk_widget_destroy(edit_dlg);
 }
 
-static void file_ok_callback(GtkWidget * widget, gpointer data) {
+static void 
+file_ok_callback (GtkWidget *widget, 
+		  gpointer   data) 
+{
   GtkFileSelection *fs;
   char* filename;
   fs = GTK_FILE_SELECTION (data);
   filename = gtk_file_selection_get_filename (fs);
-  if (load_store) {
+  if (load_save) {
     FILE *f = fopen(filename, "r");
     int i, c;
     char *ss;
@@ -380,13 +395,17 @@ static void file_ok_callback(GtkWidget * widget, gpointer data) {
   gtk_widget_hide (file_dlg);  
 }
 
-static void file_cancel_callback(GtkWidget * widget, gpointer data) {
+static void 
+file_cancel_callback (GtkWidget *widget, 
+		      gpointer data) 
+{
   gtk_widget_hide (file_dlg);
 }
 
 static void
-make_file_dlg() {
-  file_dlg = gtk_file_selection_new ( _("Load/Store Flame"));
+make_file_dlg (void) 
+{
+  file_dlg = gtk_file_selection_new ( _("Load/Save Flame"));
   gtk_window_position (GTK_WINDOW (file_dlg), GTK_WIN_POS_MOUSE);
   gtk_signal_connect(GTK_OBJECT (file_dlg),
 		     "delete_event",
@@ -399,27 +418,41 @@ make_file_dlg() {
 		     "clicked", (GtkSignalFunc) file_ok_callback, file_dlg);
 }
 
-static void randomize_callback(GtkWidget * widget, gpointer data) {
+static void 
+randomize_callback (GtkWidget *widget, 
+		    gpointer data) 
+{
   random_control_point(&edit_cp, config.variation);
   init_mutants();
   set_edit_preview();
 }
 
-static void edit_close_callback(GtkWidget * widget, gpointer data) {
+static void 
+edit_close_callback (GtkWidget *widget, 
+		     gpointer   data) 
+{
   gtk_widget_hide(edit_dlg);
 }
   
-static void edit_ok_callback(GtkWidget * widget, gpointer data) {
+static void 
+edit_ok_callback (GtkWidget *widget, 
+		  gpointer   data) 
+{
   gtk_widget_hide(edit_dlg);
   config.cp = edit_cp;
   set_flame_preview();  
 }
 
-static void edit_cancel_callback(GtkWidget * widget, gpointer data) {
+static void 
+edit_cancel_callback (GtkWidget *widget, 
+		      gpointer   data) 
+{
   gtk_widget_hide(edit_dlg);
 }
 
-static void init_mutants() {
+static void 
+init_mutants (void) 
+{
   int i;
   for (i = 0; i < nmutants; i++) {
     mutants[i] = edit_cp;
@@ -429,7 +462,9 @@ static void init_mutants() {
   }
 }
 
-static void my_mw_update_cb(gpointer data) {
+static void 
+my_mw_update_cb (gpointer data) 
+{
   double *fd = (double *) data;
   if (fd == &pick_speed)
     set_edit_preview();
@@ -442,7 +477,9 @@ static void my_mw_update_cb(gpointer data) {
     set_flame_preview();
 }   
 
-static void set_edit_preview() {
+static void 
+set_edit_preview (void) 
+{
   int y, i, j;
   guchar *b;
   control_point pcp;
@@ -490,7 +527,10 @@ static void set_edit_preview() {
   g_free(b);
 }
 
-static void preview_clicked(GtkWidget * widget, gpointer data) {
+static void 
+preview_clicked (GtkWidget *widget, 
+		 gpointer data) 
+{
   int mut = (int) data;
   if (mut == 4) {
     control_point t = edit_cp;
@@ -509,15 +549,19 @@ static void preview_clicked(GtkWidget * widget, gpointer data) {
 
 
 static void
-edit_callback(GtkWidget * widget, gpointer data) {
+edit_callback (GtkWidget *widget, 
+	       gpointer   data) 
+{
   edit_cp = config.cp;
-  if (0 == edit_dlg) {
+
+  if (edit_dlg == 0) {
     GtkWidget *table;
+    GtkWidget *hbbox;
     GtkWidget *button;
     GtkWidget *box, *frame, *vbox;
     int i, j;
 
-    edit_dlg = gtk_dialog_new();
+    edit_dlg = gtk_dialog_new ();
   
     gtk_window_set_title(GTK_WINDOW(edit_dlg), _("Edit Flame"));
     gtk_window_position(GTK_WINDOW(edit_dlg), GTK_WIN_POS_MOUSE);
@@ -527,33 +571,41 @@ edit_callback(GtkWidget * widget, gpointer data) {
     gtk_signal_connect(GTK_OBJECT(edit_dlg), "delete_event",
 		       (GtkSignalFunc) gtk_widget_hide_on_delete, NULL);
 
-    button = gtk_button_new_with_label( _("OK"));
-    GTK_WIDGET_SET_FLAGS(button, GTK_CAN_DEFAULT);
-    gtk_signal_connect(GTK_OBJECT(button), "clicked",
-		       (GtkSignalFunc) edit_ok_callback, 0);
-    gtk_box_pack_start(GTK_BOX(GTK_DIALOG(edit_dlg)->action_area),
-		       button, TRUE, TRUE, 0);
-    gtk_widget_grab_default(button);
-    gtk_widget_show(button);
-
-    button = gtk_button_new_with_label( _("Cancel"));
-    GTK_WIDGET_SET_FLAGS(button, GTK_CAN_DEFAULT);
-    gtk_signal_connect(GTK_OBJECT(button), "clicked",
-		       (GtkSignalFunc) edit_cancel_callback, 0);
-    gtk_box_pack_start(GTK_BOX(GTK_DIALOG(edit_dlg)->action_area),
-		       button, TRUE, TRUE, 0);
-    gtk_widget_grab_default(button);
-    gtk_widget_show(button);
+    /*  Action area  */
+    gtk_container_set_border_width (GTK_CONTAINER (GTK_DIALOG (edit_dlg)->action_area), 2);
+    gtk_box_set_homogeneous (GTK_BOX (GTK_DIALOG (edit_dlg)->action_area), FALSE);
+    hbbox = gtk_hbutton_box_new ();
+    gtk_button_box_set_spacing (GTK_BUTTON_BOX (hbbox), 4);
+    gtk_box_pack_end (GTK_BOX (GTK_DIALOG (edit_dlg)->action_area), hbbox, FALSE, FALSE, 0);
+    gtk_widget_show (hbbox);
+    
+    button = gtk_button_new_with_label ( _("OK"));
+    GTK_WIDGET_SET_FLAGS (button, GTK_CAN_DEFAULT);
+    gtk_signal_connect (GTK_OBJECT (button), "clicked",
+			(GtkSignalFunc) edit_ok_callback, 0);
+    gtk_box_pack_start (GTK_BOX (hbbox), button, FALSE, FALSE, 0);
+    gtk_widget_grab_default (button);
+    gtk_widget_show (button);
+    
+    button = gtk_button_new_with_label ( _("Cancel"));
+    GTK_WIDGET_SET_FLAGS (button, GTK_CAN_DEFAULT);
+    gtk_signal_connect (GTK_OBJECT (button), "clicked",
+			(GtkSignalFunc) edit_cancel_callback, 0);
+    gtk_box_pack_start (GTK_BOX (hbbox), button, FALSE, FALSE, 0);
+    gtk_widget_show (button);
 
     frame = gtk_frame_new( _("Directions"));
     gtk_frame_set_shadow_type(GTK_FRAME(frame), GTK_SHADOW_ETCHED_IN);
-    gtk_container_border_width(GTK_CONTAINER(frame), 10);
+    gtk_container_border_width(GTK_CONTAINER(frame), 4);
     gtk_box_pack_start(GTK_BOX(GTK_DIALOG(edit_dlg)->vbox),
 		       frame, TRUE, TRUE, 0);
     gtk_widget_show(frame);
 
     table = gtk_table_new(3, 3, FALSE);
     gtk_container_add(GTK_CONTAINER(frame), table);
+    gtk_container_border_width(GTK_CONTAINER(table), 4);
+    gtk_table_set_row_spacings(GTK_TABLE(table), 4);
+    gtk_table_set_col_spacings(GTK_TABLE(table), 4);
     gtk_widget_show(table);
 
     for (i = 0; i < 3; i++)
@@ -574,27 +626,27 @@ edit_callback(GtkWidget * widget, gpointer data) {
       }
 
     frame = gtk_frame_new( _("Controls"));
-    gtk_frame_set_shadow_type(GTK_FRAME(frame), GTK_SHADOW_ETCHED_IN);
-    gtk_container_border_width(GTK_CONTAINER(frame), 10);
+    gtk_frame_set_shadow_type (GTK_FRAME(frame), GTK_SHADOW_ETCHED_IN);
+    gtk_container_border_width (GTK_CONTAINER(frame), 4);
     gtk_box_pack_start(GTK_BOX(GTK_DIALOG(edit_dlg)->vbox),
 		       frame, TRUE, TRUE, 0);
     gtk_widget_show(frame);
 
-    vbox = gtk_vbox_new (FALSE, 5);
+    vbox = gtk_vbox_new (FALSE, 4);
     gtk_container_add (GTK_CONTAINER (frame), vbox);
     gtk_widget_show(vbox);
 
     table = gtk_table_new(2, 2, FALSE);
-    gtk_box_pack_start(GTK_BOX(vbox),
-		       table, TRUE, FALSE, 10);
+    gtk_box_pack_start(GTK_BOX(vbox), table, FALSE, FALSE, 0);
+    gtk_container_border_width(GTK_CONTAINER(table), 4);
+    gtk_table_set_col_spacings(GTK_TABLE(table), 8);
     gtk_widget_show(table);
     
     mw_fscale_entry_new(table, _("Speed"), 0.05, 0.5, 0.01, 0.1,
 			0.0, 0, 1, 1, 2, &pick_speed);
 
-    box = gtk_hbox_new (TRUE, 5);
-    gtk_box_pack_start(GTK_BOX(vbox),
-		       box, TRUE, FALSE, 10);
+    box = gtk_hbox_new (FALSE, 4);
+    gtk_box_pack_start(GTK_BOX(vbox), box, FALSE, FALSE, 4);
     gtk_widget_show(box);
 
     button = gtk_button_new_with_label( _("Randomize"));
@@ -602,7 +654,7 @@ edit_callback(GtkWidget * widget, gpointer data) {
     gtk_signal_connect_object(GTK_OBJECT(button), "clicked",
 			      (GtkSignalFunc) randomize_callback,
 			      (gpointer) 0);
-    gtk_box_pack_start(GTK_BOX(box), button, TRUE, FALSE, 0);
+    gtk_box_pack_start(GTK_BOX(box), button, FALSE, FALSE, 0);
     gtk_widget_show(button);
 
     {
@@ -626,8 +678,8 @@ edit_callback(GtkWidget * widget, gpointer data) {
       GtkWidget *menu, *w;
       int i;
 
-      hbox = gtk_hbox_new (FALSE, 5);
-      gtk_box_pack_start(GTK_BOX(box), hbox, TRUE, FALSE, 10);
+      hbox = gtk_hbox_new (FALSE, 4);
+      gtk_box_pack_end (GTK_BOX(box), hbox, FALSE, FALSE, 4);
       gtk_widget_show(hbox);
 
       w = gtk_label_new( _("Variation:"));
@@ -661,7 +713,10 @@ edit_callback(GtkWidget * widget, gpointer data) {
     gtk_widget_show(edit_dlg);
 }
 
-static void load_callback(GtkWidget * widget, gpointer data) {
+static void 
+load_callback (GtkWidget *widget, 
+	       gpointer   data) 
+{
   if (!file_dlg) {
     make_file_dlg();
   } else {
@@ -669,23 +724,29 @@ static void load_callback(GtkWidget * widget, gpointer data) {
       return;
   }
   gtk_window_set_title(GTK_WINDOW (file_dlg), _("Load Flame"));
-  load_store = 1;
+  load_save = 1;
   gtk_widget_show (file_dlg);
 }
 
-static void store_callback(GtkWidget * widget, gpointer data) {
+static void 
+save_callback (GtkWidget *widget, 
+	       gpointer   data) 
+{
   if (!file_dlg) {
     make_file_dlg();
   } else {
     if (GTK_WIDGET_VISIBLE(file_dlg))
       return;
   }
-  gtk_window_set_title(GTK_WINDOW (file_dlg), _("Store Flame"));
-  load_store = 0;
+  gtk_window_set_title(GTK_WINDOW (file_dlg), _("Save Flame"));
+  load_save = 0;
   gtk_widget_show (file_dlg);
 }
 
-static void menu_cb(GtkWidget * widget, gpointer data) {
+static void 
+menu_cb (GtkWidget *widget, 
+	 gpointer  data) 
+{
   config.variation = (int) data;
   if (variation_same != config.variation)
     random_control_point(&edit_cp, config.variation);
@@ -693,7 +754,9 @@ static void menu_cb(GtkWidget * widget, gpointer data) {
   set_edit_preview();
 }
 
-static void set_flame_preview() {
+static void 
+set_flame_preview (void) 
+{
   int y;
   guchar *b;
   control_point pcp;
@@ -726,7 +789,9 @@ static void set_flame_preview() {
   gtk_widget_draw (flame_preview, NULL);
 }
 
-static void set_cmap_preview() {
+static void 
+set_cmap_preview (void) 
+{
   int i, x, y;
   guchar b[96];
 
@@ -751,14 +816,20 @@ static void set_cmap_preview() {
   gtk_widget_draw (cmap_preview, NULL);  
 }
 
-static void gradient_cb(GtkWidget * widget, gpointer data) {
+static void 
+gradient_cb (GtkWidget *widget, 
+	     gpointer   data) 
+{
   config.cmap_drawable = (int)data;
   set_cmap_preview();
   set_flame_preview();
   /*  set_edit_preview(); */
 }
 
-static void cmap_callback(gint32 id, gpointer data) {
+static void 
+cmap_callback (gint32   id, 
+	       gpointer data) 
+{
   config.cmap_drawable = id;
   set_cmap_preview();
   set_flame_preview();
@@ -767,13 +838,17 @@ static void cmap_callback(gint32 id, gpointer data) {
 
 
 static gint
-cmap_constrain (gint32 image_id, gint32 drawable_id, gpointer data) {
-  
+cmap_constrain (gint32   image_id, 
+		gint32   drawable_id, 
+		gpointer data) 
+{  
   return ! gimp_drawable_is_indexed (drawable_id);
 }
 
 
-static gint dialog() {
+static gint 
+dialog (void) 
+{
   GtkWidget *hbbox;
   GtkWidget *button;
   GtkWidget *table;
@@ -835,22 +910,22 @@ static gint dialog() {
 
   frame = gtk_frame_new( _("Rendering"));
   gtk_frame_set_shadow_type(GTK_FRAME(frame), GTK_SHADOW_ETCHED_IN);
-  gtk_container_border_width(GTK_CONTAINER(frame), 10);
+  gtk_container_border_width(GTK_CONTAINER(frame), 4);
   gtk_box_pack_start(GTK_BOX(GTK_DIALOG(dlg)->vbox), frame, TRUE, TRUE, 0);
   gtk_widget_show(frame);
 
-  box = gtk_vbox_new (FALSE, 5);
+  box = gtk_vbox_new (FALSE, 4);
   gtk_container_add(GTK_CONTAINER(frame), box);
   gtk_widget_show(box);
 
   table = gtk_table_new(7, 2, FALSE);
   gtk_box_pack_start(GTK_BOX(box), table, FALSE, FALSE, 0);
 
-  gtk_container_border_width(GTK_CONTAINER(table), 10);
+  gtk_container_border_width(GTK_CONTAINER(table), 4);
   gtk_widget_show(table);
 
-  gtk_table_set_row_spacings(GTK_TABLE(table), 10);
-  gtk_table_set_col_spacings(GTK_TABLE(table), 10);
+  gtk_table_set_row_spacings(GTK_TABLE(table), 8);
+  gtk_table_set_col_spacings(GTK_TABLE(table), 8);
 
   row = 1;
 
@@ -875,16 +950,16 @@ static gint dialog() {
     GtkWidget *option_menu = gtk_option_menu_new ();
     gint32 save_drawable = config.cmap_drawable;
 
-    hbox = gtk_hbox_new (FALSE, 5);
+    hbox = gtk_hbox_new (FALSE, 4);
     gtk_box_pack_start(GTK_BOX(box), hbox, FALSE, FALSE, 10);
     gtk_widget_show(hbox);
 
-    w = gtk_label_new( _("Colormap:"));
+    w = gtk_label_new( _("Colormap"));
     gtk_misc_set_alignment(GTK_MISC(w), 0.0, 0.5);
-    gtk_box_pack_start(GTK_BOX(hbox), w, TRUE, TRUE, 10);
+    gtk_box_pack_start(GTK_BOX(hbox), w, TRUE, TRUE, 4);
     gtk_widget_show(w);
 
-    gtk_box_pack_start(GTK_BOX(hbox), option_menu, TRUE, TRUE, 10);
+    gtk_box_pack_start(GTK_BOX(hbox), option_menu, TRUE, TRUE, 4);
     menu = gimp_drawable_menu_new(cmap_constrain, cmap_callback,
 				  0, config.cmap_drawable);
 
@@ -935,24 +1010,24 @@ static gint dialog() {
     cmap_preview = gtk_preview_new (GTK_PREVIEW_COLOR);
     gtk_preview_size (GTK_PREVIEW (cmap_preview), 32, 32);
 
-    gtk_box_pack_start(GTK_BOX(hbox), cmap_preview, TRUE, TRUE, 10);
+    gtk_box_pack_start(GTK_BOX(hbox), cmap_preview, TRUE, TRUE, 4);
     gtk_widget_show (cmap_preview);
     set_cmap_preview();
   }
 
   frame = gtk_frame_new( _("Camera"));
   gtk_frame_set_shadow_type(GTK_FRAME(frame), GTK_SHADOW_ETCHED_IN);
-  gtk_container_border_width(GTK_CONTAINER(frame), 10);
+  gtk_container_border_width(GTK_CONTAINER(frame), 4);
   gtk_box_pack_start(GTK_BOX(GTK_DIALOG(dlg)->vbox), frame, TRUE, TRUE, 0);
   gtk_widget_show(frame);
 
   table = gtk_table_new(4, 2, FALSE);
-  gtk_container_border_width(GTK_CONTAINER(table), 10);
+  gtk_container_border_width(GTK_CONTAINER(table), 4);
   gtk_container_add(GTK_CONTAINER(frame), table);
   gtk_widget_show(table);
 
-  gtk_table_set_row_spacings(GTK_TABLE(table), 10);
-  gtk_table_set_col_spacings(GTK_TABLE(table), 10);
+  gtk_table_set_row_spacings(GTK_TABLE(table), 8);
+  gtk_table_set_col_spacings(GTK_TABLE(table), 8);
 
   row = 1;
   
@@ -977,14 +1052,14 @@ static gint dialog() {
   }
   gtk_preview_size (GTK_PREVIEW (flame_preview), preview_width, preview_height);
 
-  box = gtk_hbox_new (FALSE, 5);
+  box = gtk_hbox_new (FALSE, 4);
   gtk_box_pack_start(GTK_BOX(GTK_DIALOG(dlg)->vbox),
 		     box, FALSE, FALSE, 0);
   gtk_widget_show(box);
   
   frame = gtk_frame_new( _("Preview"));
   gtk_frame_set_shadow_type(GTK_FRAME(frame), GTK_SHADOW_ETCHED_IN);
-  gtk_container_border_width(GTK_CONTAINER(frame), 10);
+  gtk_container_border_width(GTK_CONTAINER(frame), 4);
   gtk_container_add(GTK_CONTAINER(frame), flame_preview);
   gtk_box_pack_start(GTK_BOX(box), frame, TRUE, FALSE, 0);
   gtk_widget_show(frame);
@@ -993,35 +1068,40 @@ static gint dialog() {
   set_flame_preview();
 
   {
-    GtkWidget *vbox = gtk_vbox_new (TRUE, 5);
-    gtk_box_pack_start(GTK_BOX(box), vbox, TRUE, FALSE, 0);
-    gtk_widget_show(vbox);
+    GtkWidget *vbox;
+    GtkWidget *vbbox;
+
+    vbox = gtk_vbox_new (FALSE, 4);
+    gtk_box_pack_start (GTK_BOX (box), vbox, FALSE, FALSE, 4);
+    vbbox= gtk_vbutton_box_new ();
+    gtk_box_set_homogeneous (GTK_BOX (vbbox), FALSE);
+    gtk_button_box_set_spacing (GTK_BUTTON_BOX (vbbox), 4);
+    gtk_box_pack_start (GTK_BOX (vbox), vbbox, FALSE, FALSE, 0);
+    gtk_widget_show (vbbox);
+    gtk_widget_show (vbox);
   
-    button = gtk_button_new_with_label( _("Shape Edit"));
+    button = gtk_button_new_with_label( _("Edit Flame"));
     GTK_WIDGET_SET_FLAGS(button, GTK_CAN_DEFAULT);
     gtk_signal_connect_object(GTK_OBJECT(button), "clicked",
 			      (GtkSignalFunc) edit_callback,
-			      (gpointer) 0);
-  
-    gtk_box_pack_start(GTK_BOX(vbox), button, TRUE, FALSE, 10);
+			      (gpointer) 0);  
+    gtk_box_pack_start(GTK_BOX(vbbox), button, FALSE, FALSE, 0);
     gtk_widget_show(button);
 
-    button = gtk_button_new_with_label( _("Load"));
+    button = gtk_button_new_with_label( _("Load Flame"));
     GTK_WIDGET_SET_FLAGS(button, GTK_CAN_DEFAULT);
     gtk_signal_connect_object(GTK_OBJECT(button), "clicked",
 			      (GtkSignalFunc) load_callback,
 			      (gpointer) 0);
-  
-    gtk_box_pack_start(GTK_BOX(vbox), button, TRUE, FALSE, 10);
+    gtk_box_pack_start(GTK_BOX(vbbox), button, FALSE, FALSE, 0);
     gtk_widget_show(button);
 
-    button = gtk_button_new_with_label( _("Store"));
+    button = gtk_button_new_with_label( _("Save Flame"));
     GTK_WIDGET_SET_FLAGS(button, GTK_CAN_DEFAULT);
     gtk_signal_connect_object(GTK_OBJECT(button), "clicked",
-			      (GtkSignalFunc) store_callback,
-			      (gpointer) 0);
-  
-    gtk_box_pack_start(GTK_BOX(vbox), button, TRUE, FALSE, 10);
+			      (GtkSignalFunc) save_callback,
+			      (gpointer) 0);  
+    gtk_box_pack_start(GTK_BOX(vbbox), button, FALSE, FALSE, 0);
     gtk_widget_show(button);
   }
 
