@@ -292,12 +292,12 @@ static void query (void) {
 
    gimp_install_procedure (PLUG_IN_NAME,
 			   "Pagecurl effect",
-			   "This plug-in creates an pagecurl-effect.",
+			   "This plug-in creates a pagecurl-effect.",
 			   "Federico Mena Quintero and Simon Budig",
 			   "Federico Mena Quintero and Simon Budig",
 			   PLUG_IN_VERSION,
 			   "<Image>/Filters/Distorts/Pagecurl...",
-			   "RGBA*, GRAYA*",
+			   "RGBA, GRAYA",
 			   PROC_PLUG_IN,
 			   nargs,
 			   nreturn_vals,
